@@ -327,6 +327,12 @@ ensuring that it will grow up to be a player.  The Cleric, by this prayer, \
 endows the baby with both name and spirit, therefore it must be cast before \
 the child learns to walk.
 
+PRAYER_CLEANLINESS=<ABILITY>\
+Usage    : PRAY "CLEANLINESS" [TARGET NAME]\n\r\
+Example  : pray "cleanliness" bob\n\r\
+Brings the target closer to divinity by removing dirt, grime, and stink from \
+the target player.
+
 PRAYER_CONDEMNATION=<ABILITY>\
 Usage    : PRAY CONDEMNATION [TARGET NAME]\n\r\
 Example  : pray condemnation orc\n\r\
